fixes to sizing on mobile, tablet, desktop

--- a/assets/style.css
+++ b/assets/style.css
@@ -11,9 +11,9 @@
 }
 
 body {
-    width: 100%;
+
     margin: 0;
-    overflow: hidden;
+    /* overflow: hidden; */
     /* background-color: var(--background-color); */
 }
 
@@ -116,5 +116,32 @@ nav ul {
     0% {
         opacity: 0;
         transform: translateY(30px);
+    }
+}
+
+@media screen and (max-width: 1216px) {
+    header {
+        justify-content: center;
+        padding: 30px 300px;
+    }
+}
+
+@media screen and (max-width: 994px) {
+    header {
+        justify-content: center;
+        padding: 30px;
+        display: flex;
+        margin-left: auto;
+        margin-right: auto;
+    
+    }
+    nav {
+        display: flex;
+    }
+    #heroImg {
+        display: block;
+        margin-left: 100px;
+        margin-right: auto;
+        width: 50vw;
     }
 }
